Fixed style of the div's query to display the scroll Added overflow: auto and set the height to display the scroll, so you can view all the query's

--- a/view/zend-developer-tools/toolbar/toolbar.css
+++ b/view/zend-developer-tools/toolbar/toolbar.css
@@ -211,6 +211,11 @@
     overflow: hidden;
 }
 
+#zend-developer-toolbar .zdt-toolbar-info.zdt-toolbar-dbquery {
+    overflow: auto;
+    height:155px;
+}
+
 #zend-developer-toolbar .zdt-toolbar-info .zdt-detail-value pre {
     max-height: 350px;
     max-width: 650px;
